--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
-    "gh-pages": "USE_SSH=true yarn deploy",
+    "gh-pages": "USE_SSH=true docusaurus deploy",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
